[gd_scene load_steps=7 format=3 uid="uid://b0vkr47aitpgs"]

[ext_resource type="Script" path="res://debug/debug_enemy_a.gd" id="1_cpw8m"]
[ext_resource type="Texture2D" uid="uid://cufe1qbt44f1g" path="res://graphics/EnemyDebugA.png" id="1_hhcgh"]
[ext_resource type="Script" path="res://FSM/FiniteStateMachine.gd" id="2_fqd0v"]
[ext_resource type="Script" path="res://FSM/enemy_state/Move.gd" id="4_r4ewk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gxbhx"]
radius = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_om5i6"]
size = Vector2(120, 120)

[node name="DebugEnemyA" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 13
script = ExtResource("1_cpw8m")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(9.53674e-07, 9.53674e-07)
scale = Vector2(0.466667, 0.466667)
texture = ExtResource("1_hhcgh")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gxbhx")

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="HurtBox" type="CollisionShape2D" parent="HurtArea"]
shape = SubResource("RectangleShape2D_om5i6")

[node name="FSM" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_fqd0v")
initial_state = NodePath("Move")

[node name="Move" type="Node" parent="FSM"]
script = ExtResource("4_r4ewk")

[node name="Hurt" type="Node" parent="FSM"]

[node name="Attack" type="Node" parent="FSM"]

[node name="Staggered" type="Node" parent="FSM"]

[node name="HurtDuration" type="Timer" parent="."]
process_callback = 0
wait_time = 0.05
one_shot = true

[node name="RayCastBottomLeft" type="RayCast2D" parent="."]
position = Vector2(-20, 0)
target_position = Vector2(0, 160)

[node name="RayCastBottomRight" type="RayCast2D" parent="."]
position = Vector2(20, 0)
target_position = Vector2(0, 160)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 20)
target_position = Vector2(-60, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 20)
target_position = Vector2(60, 0)

[connection signal="area_entered" from="HurtArea" to="." method="_on_hurt_area_area_entered"]
[connection signal="area_exited" from="HurtArea" to="." method="_on_hurt_area_area_exited"]
[connection signal="timeout" from="HurtDuration" to="." method="_on_hurt_duration_timeout"]
